siduxcc (0.9.38+nmu1) UNRELEASED; urgency=low

  * Non-maintainer upload.
  * hermes: show WARNING problem fixed 

 -- Fabian Wuertz <xadras@sidux.com>  Tue, 15 Apr 2008 13:01:47 +0200

siduxcc (0.9.38) UNRELEASED; urgency=low

  * NOT RELEASED YET

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Fri, 11 Apr 2008 23:54:46 +0200

siduxcc (0.9.37) unstable; urgency=low

  * enhanced pt language file. Thanks to Rui Umbelino (VaMPiRiC_CRoW)

 -- Joaquim Boura <x-un-i@sidux.com>  Fri, 11 Apr 2008 23:22:08 +0200

siduxcc (0.9.36) unstable; urgency=low

  [ Joaquim Boura ]
  * enhanced pt language file. Thanks to Rui Umbelino (VaMPiRiC_CRoW)

  [ Fabian Wuertz ]
  * cli: kernel: update function updated

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 09 Apr 2008 00:19:28 +0200

siduxcc (0.9.35) unstable; urgency=low

  [ Joaquim Boura ]
  * ja translation updated (muchan)

  [ Fabian Wuertz ]
  * kde: services: design updated

 -- Fabian Wuertz <xadras@sidux.com>  Mon, 07 Apr 2008 15:03:14 +0200

siduxcc (0.9.34) unstable; urgency=low

  * de translation updated

 -- Fabian Wuertz <xadras@sidux.com>  Sun, 30 Mar 2008 13:10:58 +0200

siduxcc (0.9.33) unstable; urgency=low

  * nl translation updated
  * de translation updated

 -- Fabian Wuertz <xadras@sidux.com>  Fri, 28 Mar 2008 01:54:42 +0100

siduxcc (0.9.32) unstable; urgency=low

  * kde: kernel: warning message for "disable automatic kernel update"
    function added

 -- Fabian Wuertz <xadras@sidux.com>  Wed, 26 Mar 2008 15:21:58 +0100

siduxcc (0.9.31) unstable; urgency=low

  * debian: konsole dependency added (solves the problems with the icewm)
  * hermes: descriptions updated
  * translation: de updated 
  * kde: kernel: kernel-remove reload problem solved
  * kde: network: tab problem solved
  * kde: network: networkcard reload problem solved
  * kde: services: type 
  * kde: services: descriptions updated
  * kde: services: descriptions updated
  * cli: kernel: amd bug solved