@@ -1,0 +1,17 @@
+#!/bin/sh
+# hermesExec
+# (C) 2008 Fabian Wuertz <xadras@sidux.com>
+# License: GPL
+
+[ -z "${1}" ] && exit 0
+
+if [ "$(id -u)" -ne 0 ]; then
+	[ -x "$(which su-to-root)" ] && exec su-to-root -c "${0} $@"
+	printf "ERROR: $0 needs root capabilities, please start it as root.\n\n" >&2
+	exit 1
+fi
+
+case $1 in
+	update)   siduxcc software update;;
+	download) siduxcc software download;;
+esac
