@@ -2,8 +2,10 @@ siduxcc (0.9.38+nmu1) UNRELEASED; urgency=low
 
   * Non-maintainer upload.
   * hermes: show WARNING problem fixed 
+  * hermes: Exex script added
+  * hermes: download button added
 
- -- Fabian Wuertz <xadras@sidux.com>  Tue, 15 Apr 2008 13:01:47 +0200
+ -- Fabian Wuertz <xadras@sidux.com>  Tue, 15 Apr 2008 13:27:30 +0200
 
 siduxcc (0.9.38) UNRELEASED; urgency=low
 
